Generic links by routes
