# app/Http/Controllers/Api/GenericLinkController.php
@@ -106,4 +106,62 @@ class GenericLinkController extends Controller
             'success' => true
         ]);
     }
+
+    /**
+     * @OA\Get(
+     *     path="/api/generic/links",
+     *     summary="Récupérer les liens par défaut",
+     *     description="Retourne la liste paginée des liens génériques",
+     *     tags={"Links"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Liste des liens récupérés avec succès",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="response", type="object",
+     *                 @OA\Property(property="current_page", type="integer"),
+     *                 @OA\Property(property="data", type="array", @OA\Items(
+     *                     @OA\Property(property="id", type="integer"),
+     *                     @OA\Property(property="title", type="string"),
+     *                     @OA\Property(property="description", type="string"),
+     *                     @OA\Property(property="url", type="string"),
+     *                     @OA\Property(property="icon", type="string"),
+     *                     @OA\Property(property="category", type="object"),
+     *                     @OA\Property(property="country", type="object")
+     *                 )),
+     *                 @OA\Property(property="first_page_url", type="string"),
+     *                 @OA\Property(property="from", type="integer"),
+     *                 @OA\Property(property="last_page", type="integer"),
+     *                 @OA\Property(property="last_page_url", type="string"),
+     *                 @OA\Property(property="next_page_url", type="string", nullable=true),
+     *                 @OA\Property(property="path", type="string"),
+     *                 @OA\Property(property="per_page", type="integer"),
+     *                 @OA\Property(property="prev_page_url", type="string", nullable=true),
+     *                 @OA\Property(property="to", type="integer"),
+     *                 @OA\Property(property="total", type="integer")
+     *             ),
+     *             @OA\Property(property="message", type="string"),
+     *             @OA\Property(property="success", type="boolean")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Pays non trouvé"
+     *     )
+     * )
+     *
+     * Récupérer les liens par pays et optionnellement par catégorie avec pagination
+     */
+    public function index()
+    {
+        $links = GenericLink::with(['category', 'country'])
+            ->where('status', 1)
+            #->where('validation_status', 'approved')
+            ->paginate(10);
+        return response()->json([
+            'response' => $links,
+            'message' => 'Links retrieved successfully',
+            'success' => true
+        ]);
+    }
 }
